--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,9 @@
 
 .App {
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 95vw;
   background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
