--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -17,3 +17,16 @@
     border-radius: 0.5rem;
     color: white;
 }
+
+.card:hover {
+    height: 20rem;
+    width: 12rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin: 1rem;
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 0.5rem;
+    color: black;
+}
