Added header and nav toggle

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -16,6 +16,12 @@
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 0.5rem;
     color: white;
+    &__price-change{
+        color: green;
+    }
+    &__price-change-red{
+        color: red;
+    }
 }
 
 .card:hover {
