--- a/src/containers/Nav/Nav.scss
+++ b/src/containers/Nav/Nav.scss
@@ -6,8 +6,32 @@
 }
 
 .nav {
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 0.5rem;
-    color: white;
+    width: 100vw;
+    background-color: rgba(255, 255, 255, 1);
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 2rem 0rem;
+    font-size: 1.5rem;
+    .price-below{
+        display: flex;
+        align-items: center;
+        button{
+            background-color: black;
+            color: white;
+            font-size: 1.5rem;
+            padding: 0.3rem;
+            border: none;
+            border-radius: 0.5rem;
+            margin: 0rem 0.3rem;
+        }
+        .search-box{
+            height: 2rem;
+            margin: 0rem 0.3rem;
+            border: 0.2rem solid black;
+            border-radius: 0.5rem;
+            font-size: 1rem;
+        }
+    }
 }
