--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -17,10 +17,16 @@
     border-radius: 0.5rem;
     color: white;
     &__price-change{
-        color: green;
+        color: lightgreen;
     }
     &__price-change-red{
         color: red;
+    }
+    &__price-info{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
 
