Added github pages link to read me

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -28,6 +28,9 @@
         align-items: center;
         justify-content: center;
     }
+    &__coin-name{
+        text-align: center;
+    }
 }
 
 .card:hover {
